--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewWide.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewWide.axaml
@@ -8,20 +8,30 @@
              x:Class="Sanet.MakaMek.Avalonia.Views.StartNewGame.StartNewGameViewWide"
              x:DataType="viewModels1:StartNewGameViewModel">
     <Grid 
-        ColumnDefinitions="*,*"
-        RowDefinitions="Auto,*,Auto, Auto">
-            <TextBlock Grid.Row="0" Grid.Column="1" Text="Map" Classes="h2" HorizontalAlignment="Center"/>
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Players" Classes="h2" HorizontalAlignment="Center"/>
-            <fragments:PlayersFragment Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Margin="10"/>
-            <fragments:MapConfigFragment Grid.Column="1" Grid.Row="1" Margin="10"/>
-            <fragments:NetworkFragment Grid.Column="1" Grid.Row="2" IsVisible="{Binding CanStartLanServer}" Margin="10"/>
-            <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
-                    Command="{Binding StartGameCommand}"
-                    Content="Start Game"
-                    Classes="primary"
-                    IsEnabled="{Binding CanStartGame}"
-                    HorizontalAlignment="Center"
-                    Margin="0,10,0,0"/>
+        RowDefinitions="*, Auto">
+        <StackPanel
+            VerticalAlignment="Stretch"
+            HorizontalAlignment="Stretch"
+            Orientation="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Grid}, 
+                        Path=Bounds.Size, 
+                        Converter={StaticResource AdaptiveOrientationConverter}}">
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Players" Classes="h2" HorizontalAlignment="Center"/>
+                <fragments:PlayersFragment Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Margin="10"/>
+            </StackPanel>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">      
+                <TextBlock Grid.Row="0" Grid.Column="1" Text="Map" Classes="h2" HorizontalAlignment="Center"/>
+                <fragments:MapConfigFragment Grid.Column="1" Grid.Row="1" Margin="10"/>
+                <fragments:NetworkFragment Grid.Column="1" Grid.Row="2" IsVisible="{Binding CanStartLanServer}" Margin="10"/>
+            </StackPanel>
+        </StackPanel>
+        <Button Grid.Row="1" Grid.Column="0"
+                Command="{Binding StartGameCommand}"
+                Content="Start Game"
+                Classes="primary"
+                IsEnabled="{Binding CanStartGame}"
+                HorizontalAlignment="Center"
+                Margin="0,10,0,0"/>
     </Grid>
 
 </UserControl>
