feat: relayout using uniform grid

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/App.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/App.axaml
@@ -16,6 +16,8 @@
             <converters:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter"/>
             <converters:HitProbabilityColorConverter x:Key="HitProbabilityColorConverter"/>
             <converters:AdaptiveOrientationConverter x:Key="AdaptiveOrientationConverter"/>
+            <converters:AdaptiveRowsConverter x:Key="AdaptiveRowsConverter"/>
+            <converters:AdaptiveColumnsConverter x:Key="AdaptiveColumnsConverter"/>
 
             <ResourceDictionary.MergedDictionaries>
                 <ResourceInclude Source="avares://Sanet.MakaMek.Avalonia/Styles/Colors.axaml"/>
