--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewWide.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewWide.axaml
@@ -9,22 +9,28 @@
              x:DataType="viewModels1:StartNewGameViewModel">
     <Grid 
         RowDefinitions="*, Auto">
-        <StackPanel
+        <UniformGrid
             VerticalAlignment="Stretch"
             HorizontalAlignment="Stretch"
-            Orientation="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Grid}, 
+            Rows="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Grid}, 
                         Path=Bounds.Size, 
-                        Converter={StaticResource AdaptiveOrientationConverter}}">
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Players" Classes="h2" HorizontalAlignment="Center"/>
-                <fragments:PlayersFragment Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Margin="10"/>
-            </StackPanel>
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">      
-                <TextBlock Grid.Row="0" Grid.Column="1" Text="Map" Classes="h2" HorizontalAlignment="Center"/>
-                <fragments:MapConfigFragment Grid.Column="1" Grid.Row="1" Margin="10"/>
-                <fragments:NetworkFragment Grid.Column="1" Grid.Row="2" IsVisible="{Binding CanStartLanServer}" Margin="10"/>
-            </StackPanel>
-        </StackPanel>
+                        Converter={StaticResource AdaptiveRowsConverter}}"
+            Columns="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Grid}, 
+                        Path=Bounds.Size, 
+                        Converter={StaticResource AdaptiveColumnsConverter}}"
+            >
+            <Grid RowDefinitions="Auto,*">
+                <TextBlock Text="Players" Classes="h2" HorizontalAlignment="Center"/>
+                <fragments:PlayersFragment Grid.Row="1" Margin="10"/>
+            </Grid>
+            <Grid RowDefinitions="Auto,*,Auto">      
+                <TextBlock Text="Map" Classes="h2" HorizontalAlignment="Center"/>
+                <ScrollViewer Grid.Row="1" >
+                    <fragments:MapConfigFragment Margin="10"/>
+                </ScrollViewer>
+                <fragments:NetworkFragment Grid.Row="2" IsVisible="{Binding CanStartLanServer}" Margin="10"/>
+            </Grid>
+        </UniformGrid>
         <Button Grid.Row="1" Grid.Column="0"
                 Command="{Binding StartGameCommand}"
                 Content="Start Game"
