feat: merge grid orientation converter and use param

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/App.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/App.axaml
@@ -16,8 +16,7 @@
             <converters:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter"/>
             <converters:HitProbabilityColorConverter x:Key="HitProbabilityColorConverter"/>
             <converters:AdaptiveOrientationConverter x:Key="AdaptiveOrientationConverter"/>
-            <converters:AdaptiveRowsConverter x:Key="AdaptiveRowsConverter"/>
-            <converters:AdaptiveColumnsConverter x:Key="AdaptiveColumnsConverter"/>
+            <converters:AdaptiveGridConverter x:Key="AdaptiveGridConverter"/>
 
             <ResourceDictionary.MergedDictionaries>
                 <ResourceInclude Source="avares://Sanet.MakaMek.Avalonia/Styles/Colors.axaml"/>
