feat: always stack join elements vertically

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewWide.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/StartNewGameViewWide.axaml
@@ -9,6 +9,7 @@
              x:Class="Sanet.MakaMek.Avalonia.Views.StartNewGame.StartNewGameViewWide"
              x:DataType="viewModels1:StartNewGameViewModel">
     <Grid 
+        Margin="10"
         RowDefinitions="*, Auto">
         <UniformGrid
             VerticalAlignment="Stretch"
