--- a/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/MapConfigFragment.axaml
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia/Views/StartNewGame/Fragments/MapConfigFragment.axaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Sanet.MakaMek.Avalonia.Views.StartNewGame.Fragments.MapConfigFragment"
              x:DataType="viewModels1:MapConfigViewModel">
-    <Grid ColumnDefinitions="*,Auto">
+    <Grid ColumnDefinitions="2*,1*">
         <!-- Configuration Sliders -->
         <StackPanel Grid.Column="0" Classes="verticalSpaced">
             <StackPanel Classes="formGroup">
@@ -36,16 +36,18 @@
 
         <!-- Map Preview -->
         <Border Grid.Column="1"
-                Margin="20,0,0,0"
+                Margin="5"
                 BorderThickness="1"
                 BorderBrush="{StaticResource BorderBrush}"
                 CornerRadius="4"
                 Background="{StaticResource SurfaceBrush}">
-            <Image Source="{Binding PreviewImage}"
-                   Width="300"
-                   Height="300"
-                   Stretch="Uniform"/>
+            
+                <Image Source="{Binding PreviewImage}"
+                       Stretch="Uniform"/>
         </Border>
+        <ProgressBar Grid.Column="1"
+                     IsVisible="{Binding IsGenerating}"
+                     IsIndeterminate="True"/>
     </Grid>
 </UserControl>
 
